# autosuggestion-backend

./: Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
app/: data.py  main.py
